# resource_builder

./: .gitignore  ASTcollapser.py  Counting and Discrete Probability.html  Counting and Discrete Probability.md  Functional Programming Paradigm.md  LICENSE  args.py  ast.ipynb  block.py  bullets.py  component.py  deck.html  deck.md  head.py  main.py  mdPreprocess.py  presentation_template.aux  presentation_template.nav  presentation_template.out  presentation_template.snm  presentation_template.tex  presentation_template.toc  ptest.md  pyproject.toml  readme.md  requirements.txt  slides.css  slides.html  slidesPost.html  slidesPre.html  temp.md  test.json  test.md  test.tex  utils.py
.ipynb_checkpoints/: ast-checkpoint.ipynb  test-checkpoint.json  test-checkpoint.md
src/autolides/: args.py  block.py  main.py
src/autoslides/: ASTcollapser.py  block.py  component.py  head.py  main.py  mdPreprocess.py  mistletoeExtension.py  slidesPost.html  utils.py
src/autoslides.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
