[project]
name = "autoslides"
version = "0.1.0"
authors = [
    { name = "Rubelito Abella", email = "bbadoodles@gmail.com" },
]
description = "Convert markdown documents into summarized slides"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/HowDoIGitHelp/resource_builder.git"

[project.scripts]
autoslides = "autoslides.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

